   (Tidy up field name indentation).
 * doc/geany.txt, doc/geany.html:
   Apply patch from John Gabriele for an overview in the Tags section
   (thanks).
   (Format paragraph with fmt -w72).
 * src/keyfile.c, src/editor.c, src/editor.h, doc/geany.txt,
   doc/geany.html:
   Allow autocompletion on a line with trailing whitespace.
   Add auto_complete_whilst_editing hidden preference.


2007-09-11  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c: HTML manual is called Manual.html on Windows, so
                    open this file.


2007-09-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/export.c, plugins/classbuilder.c, src/utils.c, src/win32.c,
   src/utils.h, src/plugindata.h, src/msgwindow.c, src/callbacks.c,
   src/keyfile.c, src/document.c, src/plugins.c, src/document.h,
   src/main.c, src/socket.c, src/ui_utils.c:
   Neaten up the plugin API:
   Make document_open_file() now wrap document_open_file_full(),
   without the idx for reloading or pos arguments.
   Replace str_replace() with string_replace_all() in the plugin API.
   Add utils_string_replace_all(), taking a GString argument.
 * src/plugindata.h, src/document.c, src/plugins.c, src/document.h:
   Add reload_file() document function to the plugin API.


2007-09-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * THANKS, pixmaps/geany.ico, pixmaps/geany.png:
   Replace Geany's icon by a new one by Sebastian Kraft (thanks).
 * plugins/Makefile.am: Add makefile.win32 to EXTRA_DIST files.
 * plugins/export.c, src/plugins.c, src/plugindata.h:
   Remove get_zoom from plugin API.


2007-09-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c, src/callbacks.c: Change quotes in some error messages to
                                 be more consistent (thanks Frank).
 * doc/geany.txt: Add notice about code navigation history.
 * src/geany.nsi:
   Install symbol list icons with the installer.
   Use Geany's icon for the installer.

