@@ -297,14 +297,12 @@ static void main_init(void)
 	ui_widgets.popup_goto_items[0] = lookup_widget(app->popup_menu, "goto_tag_definition1");
 	ui_widgets.popup_goto_items[1] = lookup_widget(app->popup_menu, "goto_tag_declaration1");
 	ui_widgets.popup_goto_items[2] = lookup_widget(app->popup_menu, "find_usage1");
-	ui_widgets.popup_items[0] = lookup_widget(app->popup_menu, "cut1");
-	ui_widgets.popup_items[1] = lookup_widget(app->popup_menu, "copy1");
-	ui_widgets.popup_items[2] = lookup_widget(app->popup_menu, "delete1");
-	ui_widgets.popup_items[3] = lookup_widget(app->popup_menu, "toggle_case1");
+	ui_widgets.popup_copy_items[0] = lookup_widget(app->popup_menu, "cut1");
+	ui_widgets.popup_copy_items[1] = lookup_widget(app->popup_menu, "copy1");
+	ui_widgets.popup_copy_items[2] = lookup_widget(app->popup_menu, "delete1");
 	ui_widgets.menu_copy_items[0] = lookup_widget(app->window, "menu_cut1");
 	ui_widgets.menu_copy_items[1] = lookup_widget(app->window, "menu_copy1");
 	ui_widgets.menu_copy_items[2] = lookup_widget(app->window, "menu_delete1");
-	ui_widgets.menu_copy_items[3] = lookup_widget(app->window, "menu_toggle_case2");
 	ui_widgets.menu_insert_include_items[0] = lookup_widget(app->popup_menu, "insert_include1");
 	ui_widgets.menu_insert_include_items[1] = lookup_widget(app->window, "insert_include2");
 	ui_widgets.save_buttons[0] = lookup_widget(app->window, "menu_save1");
